# ChangeLog for dev-util/google-perftools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Jan 2009; Sven Wegener <swegener@gentoo.org>
  +google-perftools-1.0.ebuild:
  Version bump.

  08 Oct 2008; Sven Wegener <swegener@gentoo.org>
  +google-perftools-0.99.2.ebuild:
  Version bump.

  08 Aug 2008; Sven Wegener <swegener@gentoo.org>
  +google-perftools-0.98.ebuild:
  Version bump.

  29 Apr 2008; Sven Wegener <swegener@gentoo.org>
  +google-perftools-0.97.ebuild:
  Version bump.

  09 Mar 2008; Sven Wegener <swegener@gentoo.org>
  +google-perftools-0.95.1.ebuild:
  Version bump.

  16 Feb 2008; Sven Wegener <swegener@gentoo.org>
  +google-perftools-0.95.ebuild:
  Version bump.

  05 Dec 2007; Sven Wegener <swegener@gentoo.org>
  +google-perftools-0.94.1.ebuild:
  Initial commit.
