@@ -1,25 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST google-perftools-0.94.1.tar.gz 1910734 RMD160 0259b424b3b0ad2bd76fba0d9af329dc8389d484 SHA1 4974441f037d7e92d88c5623e020e1b618056daf SHA256 6322a4a63b19062afe50801934979b0259a6aa365c1e840e678b42b8c2507f25
-DIST google-perftools-0.95.1.tar.gz 1950185 RMD160 882db84caf80b32d059dafa92c29c7aa3f63241e SHA1 8dab38b200687379e8c6b92c0480ee2960b50b16 SHA256 4e1b20ab815366bb6bfc2f73d8e5d15c1f9080a80e8d9fa6acecafd1ab1c771a
-DIST google-perftools-0.95.tar.gz 1949420 RMD160 5192b1967dd5335141ef53426fc673865f24f21c SHA1 afaeb3527edc33a7ac239cec73ca6118a9afecf7 SHA256 9140f6fd0b769a0c4118b3940a086873c33b17cd25538de521489485c762fb81
-DIST google-perftools-0.97.tar.gz 1985699 RMD160 45512543275d49eb3ad6d12fad0206f694c67537 SHA1 30098fe2c82168be959a20339e0bd733f11ff3d5 SHA256 847af74c68fa436419dd53a3dee530137b95b7c0cecd6df7173bbdf79f05ef19
-DIST google-perftools-0.98.tar.gz 2003509 RMD160 056debf14cea32665b581f9dd710bbaa7c52de58 SHA1 dfe19e0cc6ea79a418e35ad01665218b043e41be SHA256 bc3c58bf1bf3b0335a271fe1555f8fb962888ac86fbb3f8a8302f180d6509f6c
-DIST google-perftools-0.99.2.tar.gz 2021292 RMD160 954519c7f38b99c1b6dfecb0b416f18a09ee5fe9 SHA1 8448502f0ee52a0482642610f1c3718fe5a808b9 SHA256 d002c783c2f86d0b95569ce46fe897dd5f5ac664b588ed5599bace99b6172b67
 DIST google-perftools-1.0.tar.gz 1044285 RMD160 1da99d0ff23dc9699518f7fa5740de260c5b24f0 SHA1 6cc492742cb093e9b3425f4f8b14f463d3c5d14e SHA256 8813cd6ed82255e54e860f77f4bd40a868368b307fa5072f2b8cbafcc3342401
-EBUILD google-perftools-0.94.1.ebuild 589 RMD160 b9ce4fee8472de473293a44cebe6340af0a50ee3 SHA1 f2495a602ba26fa50a0db0fb791030c502f87bce SHA256 c6354addf4e63b6856f8eec481b2ce32df07b363f0dab9d358601b63a1444ff4
-EBUILD google-perftools-0.95.1.ebuild 589 RMD160 724738e40a9685071175774c33656ded0d3b2f36 SHA1 546e77067b7ae4973108a8bc430044a51f8033e7 SHA256 9511c94da6857f9424d2e09a82e1cd6ba5501cb7e063adf22b6ac1f87bd4d431
-EBUILD google-perftools-0.95.ebuild 589 RMD160 724738e40a9685071175774c33656ded0d3b2f36 SHA1 546e77067b7ae4973108a8bc430044a51f8033e7 SHA256 9511c94da6857f9424d2e09a82e1cd6ba5501cb7e063adf22b6ac1f87bd4d431
-EBUILD google-perftools-0.97.ebuild 508 RMD160 3fc7ef7689b35cf31852db8f6723a63300200e53 SHA1 cb81e49f85d18a91d77bad31f60f1c0b7b960e07 SHA256 37765226cc70e746d7a88e888cfdaec871348fc2d41ec0033ef880e78f755198
-EBUILD google-perftools-0.98.ebuild 508 RMD160 3fc7ef7689b35cf31852db8f6723a63300200e53 SHA1 cb81e49f85d18a91d77bad31f60f1c0b7b960e07 SHA256 37765226cc70e746d7a88e888cfdaec871348fc2d41ec0033ef880e78f755198
-EBUILD google-perftools-0.99.2.ebuild 508 RMD160 3fc7ef7689b35cf31852db8f6723a63300200e53 SHA1 cb81e49f85d18a91d77bad31f60f1c0b7b960e07 SHA256 37765226cc70e746d7a88e888cfdaec871348fc2d41ec0033ef880e78f755198
+DIST google-perftools-1.3.tar.gz 1120884 RMD160 eaf7827eba6307783a13aabb29bce318ffe5cf3b SHA1 fcf5b13a377bbea486b6fe32a8d2cac61c0afa51 SHA256 5f3acc39151094a4aca560fc63ca69ce438015d42a814fb1f5fe1ce3796a98c7
 EBUILD google-perftools-1.0.ebuild 508 RMD160 d14fc25666c7bd2cc99fa09935a4caf549909aa6 SHA1 ae29945c37a1653834f1cbf3d47b55002b193bd9 SHA256 014394e419c9937429cc9965d3bf7050ac4da24293f9ce8a8b76fd77c3679518
-MISC ChangeLog 833 RMD160 cb4379752d1575bce09304bf229ba0ec5e509aaf SHA1 aa9b574ca61a11f678f49b872040741a7b0667a6 SHA256 404d5581fd8e32416a29d8c9d2ca8f3b2977069a5fac2b59e5e29990d2a89573
+EBUILD google-perftools-1.3.ebuild 508 RMD160 d14fc25666c7bd2cc99fa09935a4caf549909aa6 SHA1 ae29945c37a1653834f1cbf3d47b55002b193bd9 SHA256 014394e419c9937429cc9965d3bf7050ac4da24293f9ce8a8b76fd77c3679518
+MISC ChangeLog 1216 RMD160 56e2534a326d202e3ba7d88db90e79c129793960 SHA1 18caac95faeb3004ffd639a040a48b1affeb933a SHA256 e2fe4029638a8274dff62a2fd7bcaad5929566466be790539d261c855cf77eb2
+MISC metadata.xml 443 RMD160 8465bcdc249855b36b7e55cc2e070e4316e54e3d SHA1 77057390d5bfdf1466c1e19dafd5ae8bf811eebe SHA256 e691066bb73a74eab99bd50a23ed88867b089c87a03203c64f4326d2137608e7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkmEe/oACgkQI1lqEGTUzyS0CACeL6eZHxi9rN1ZK2D4sQeqTxj4
-UG0AnRbVrqnxC12h0zD4VvTNbEqsxsUR
-=2oX3
+iD8DBQFKlEdSQW+hXSf0t0IRAmyDAJwMoS+fL/Uxp6itnp9a7Q09NwH1YACgnWzy
+8iMuI9Q8zMv/rGDDjyKEANY=
+=LcnW
 -----END PGP SIGNATURE-----
