@@ -2,6 +2,15 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*google-perftools-1.3 (25 Aug 2009)
+
+  25 Aug 2009; Lance Albertson <ramereth@gentoo.org>
+  -google-perftools-0.94.1.ebuild, -google-perftools-0.95.ebuild,
+  -google-perftools-0.95.1.ebuild, -google-perftools-0.97.ebuild,
+  -google-perftools-0.98.ebuild, -google-perftools-0.99.2.ebuild,
+  +google-perftools-1.3.ebuild, +metadata.xml:
+  Version bump, QA Fixes, clean up old ebuilds
+
   31 Jan 2009; Sven Wegener <swegener@gentoo.org>
   +google-perftools-1.0.ebuild:
   Version bump.
